# teengine

./: Cargo.toml  LICENSE  README.md
example/simple_game/: Cargo.toml  README.md
example/simple_game/assets/: pretendard.fad  tileset.json
example/simple_game/src/: main.rs
src/: core.rs  lib.rs  main.rs  shaders.rs  sprite.rs  sprite_renderer.rs  texture.rs
src/assets/fonts/: pretendard.fad  pretendard_ascii.fad
src/camera/: camera.rs
src/input/: input_manager.rs  mod.rs
src/shader/: shader.rs
src/sprite/: animation.rs  animation_sprite.rs  mod.rs  sprite.rs  sprite_renderer.rs  sprite_shaders.rs
src/sprite/utils/: color_key_util.rs
src/text/: mod.rs  text_atlas.rs  text_error.rs  text_renderer.rs  text_shader.rs  text_style.rs
src/text/font_atlas/: font_atlas.rs  font_atlas_file.rs  font_error.rs  mod.rs
src/texture/: texture.rs
src/tile/: mod.rs  properties.rs  renderer.rs  tilemap.rs  tiles.rs  tileset.rs
src/utils/: color_key_util.rs  mod.rs
