[package]
name = "teengine"
version = "0.0.1"
edition = "2021"
include = ["/src/assets/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.29.1"
gl = "0.14.0"
glam = "0.22.0"
image = "0.24.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusttype = "0.9"
unicode-normalization = "0.1.22"
flate2 = "1.0"
sha2 = "0.10"
bincode = "1.3"

[workspace]
members = ["example/*"]
